--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manarahta - Bringing Hope To Those Who Need It Most</title>
-    <meta name="description" content="Manarahta is a humanitarian organization dedicated to bringing hope to communities in need through various programs and initiatives." />
-    <meta name="author" content="Manarahta" />
+    <title>Manavata - Bringing Hope To Those Who Need It Most</title>
+    <meta name="description" content="Manavata is a humanitarian organization dedicated to bringing hope to communities in need through various programs and initiatives." />
+    <meta name="author" content="Manavata" />
 
-    <meta property="og:title" content="Manarahta - Bringing Hope To Those Who Need It Most" />
-    <meta property="og:description" content="Manarahta is a humanitarian organization dedicated to bringing hope to communities in need through various programs and initiatives." />
+    <meta property="og:title" content="Manavata - Bringing Hope To Those Who Need It Most" />
+    <meta property="og:description" content="Manavata is a humanitarian organization dedicated to bringing hope to communities in need through various programs and initiatives." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
 
